# G3

./: .gitignore  .gitmodules  README.md  log
examples/: CMakeLists.txt
examples/gcn/: CMakeLists.txt  test_gcn.cu
examples/gtc/: test_gtc.cu
examples/sgc/: CMakeLists.txt  test_sgc.cu
gunrock/: CMakeLists.txt
gunrock/app/: enactor_base.cuh
gunrock/app/gcn/: gcn_app.cu  gcn_enactor.cuh  gcn_problem.cuh  gcn_problem_template.cuh  test.json  test1.json  test2.json
gunrock/app/gcn/CrossEntropyLoss/: CrossEntropyLoss_enactor.cuh
gunrock/app/gcn/graphsum/: graphsum_app.cu
gunrock/app/gcn/matmul/: mat_mul.cuh
gunrock/app/gtc/: gtc_app.cu
gunrock/app/sgc/: sgc_app.cu  sgc_enactor.cuh  sgc_problem.cuh
gunrock/graph/: graph_base.cuh
gunrock/util/: json_spirit_value.h  json_spirit_writer_options.h  json_spirit_writer_template.h  test_utils.cuh
